feature: add Form section

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -1,5 +1,5 @@
 .header {
-  padding: 12px 0 22px 0;
+  padding: 22px 0;
   background-color: $bg-header;
 }
 .container {
@@ -16,4 +16,5 @@
   font-weight: 500;
   font-size: 1.8rem;
   line-height: 1.16;
+  text-transform: uppercase;
 }
