--- a/styles/abstracts/variables.scss
+++ b/styles/abstracts/variables.scss
@@ -5,3 +5,6 @@ $bg-link: #67bfff;
 $text-primary: #3260a1;
 $color-light: #ffffff;
 $color-dark: #000000;
+$color-dark-light: #222222;
+
+$input-border-color: #e5e5e5;
