--- a/styles/abstracts/variables.scss
+++ b/styles/abstracts/variables.scss
@@ -1,6 +1,7 @@
 $bg-header: #fefefe;
 $bg-primary: #eef5ff;
 $bg-link: #67bfff;
+$bg-button-delete: #eb5050;
 
 $text-primary: #3260a1;
 $color-light: #ffffff;
