--- a/components/Buttons/Back/Back.module.scss
+++ b/components/Buttons/Back/Back.module.scss
@@ -1,5 +1,6 @@
 .button {
   @include flex-center;
+  width: 117px;
   gap: 10px;
   padding: 11px 15px;
   box-shadow: 0px 10px 25px rgba(148, 174, 213, 0.15);
