--- a/components/Buttons/Delete/Delete.module.scss
+++ b/components/Buttons/Delete/Delete.module.scss
@@ -4,4 +4,5 @@
   background-color: $bg-button-delete;
   box-shadow: 0px 10px 25px rgba(148, 174, 213, 0.15);
   border-radius: 10px;
+  cursor: pointer;
 }
