--- a/styles/abstracts/mixins.scss
+++ b/styles/abstracts/mixins.scss
@@ -11,11 +11,11 @@
   overflow: hidden;
 }
 
-@mixin container-styles {
-  max-width: 1160px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
+// @mixin container-styles {
+//   max-width: 1160px;
+//   margin: 0 auto;
+//   padding: 0 15px;
+// }
 
 @mixin flex-center {
   display: flex;
