--- a/client/pages/article/Article.module.scss
+++ b/client/pages/article/Article.module.scss
@@ -1,5 +1,5 @@
-.article {
-  height: 100%;
+.article-section {
+  min-height: 100vh;
   padding: 30px 0 100px;
   background-color: $bg-primary;
 }
@@ -8,7 +8,7 @@
   @include visually-hidden;
 }
 
-.content {
+.article {
   position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -33,8 +33,13 @@
   line-height: 1.16;
 }
 
-.content__image {
-  align-self: center;
+.article__image {
+  position: relative;
+  width: 80%;
+  min-height: 300px;
+  place-self: center;
+  border-radius: 15px;
+  overflow: hidden;
 }
 
 .article__button {
