--- a/client/pages/Articles.module.scss
+++ b/client/pages/Articles.module.scss
@@ -14,6 +14,7 @@
 .wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 270px;
   column-gap: 3rem;
   row-gap: 5rem;
 }
