--- a/client/pages/new-article/NewArticle.module.scss
+++ b/client/pages/new-article/NewArticle.module.scss
@@ -42,6 +42,17 @@
   }
 }
 
+.input--invalid {
+  border: 1px solid $bg-button-delete;
+}
+
 .textarea {
   resize: none;
+}
+
+.error {
+  position: absolute;
+  right: 0;
+  bottom: -20px;
+  color: $bg-button-delete;
 }
