--- a/client/components/Buttons/Back/Back.module.scss
+++ b/client/components/Buttons/Back/Back.module.scss
@@ -5,8 +5,19 @@
   padding: 11px 15px;
   box-shadow: 0px 10px 25px rgba(148, 174, 213, 0.15);
   background-color: $color-light;
+  color: $text-primary;
   border-radius: 10px;
   cursor: pointer;
+  transition: all 0.3s;
+
+  &:hover {
+    color: $color-dark;
+    box-shadow: 0px 10px 25px rgba(148, 174, 213, 0.55);
+
+    .button__text {
+      color: $color-dark;
+    }
+  }
 }
 
 .button__text {
@@ -14,4 +25,5 @@
   font-weight: 600;
   font-size: 1.6rem;
   line-height: 1.5;
+  transition: all 0.3s;
 }
