--- a/client/components/Buttons/Delete/Delete.module.scss
+++ b/client/components/Buttons/Delete/Delete.module.scss
@@ -1,8 +1,15 @@
 .button {
-  padding: 5px 20px;
+  padding: 8px 20px;
   color: $color-light;
   background-color: $bg-button-delete;
   box-shadow: 0px 10px 25px rgba(148, 174, 213, 0.15);
   border-radius: 10px;
+  letter-spacing: 0.08em;
   cursor: pointer;
+  transition: all 0.3s;
+
+  &:hover {
+    background-color: darken($bg-button-delete, 20%);
+    box-shadow: 0px 10px 25px rgba(148, 174, 213, 0.55);
+  }
 }
