--- a/client/pages/Articles.module.scss
+++ b/client/pages/Articles.module.scss
@@ -17,4 +17,12 @@
   grid-auto-rows: 270px;
   column-gap: 3rem;
   row-gap: 5rem;
+
+  @media screen and (max-width: 900px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media screen and (max-width: 550px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
