--- a/client/pages/new-article/NewArticle.module.scss
+++ b/client/pages/new-article/NewArticle.module.scss
@@ -18,6 +18,7 @@
   padding: 30px;
   border-radius: 15px;
   background-color: $color-light;
+  box-shadow: 0px 10px 25px rgba(148, 174, 213, 0.55);
 }
 
 .label {
